<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_empty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/err_server"
        android:contentDescription="@string/image_content"/>

    <TextView
        android:id="@+id/tv_empty_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/err_server"
        android:textColor="@color/black80_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_empty_try"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/retry"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_empty_downloads"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/downloads"
            android:textColor="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_empty_music_lib"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/music_library"
            android:textColor="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>