<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_theme"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/theme"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_black"
                    app:layout_constraintBottom_toTopOf="@+id/tv_theme"
                    app:layout_constraintEnd_toStartOf="@+id/iv_theme"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp"
                    android:textColor="@color/text_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_theme"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv1" />

                <ImageView
                    android:id="@+id/iv_theme"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/image"
                    android:padding="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_consent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@string/your_ad_consent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_title" />

                    <TextView
                        android:id="@+id/tv_show_personalized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/show_personalized_ad"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/red"
                        android:textSize="12sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_consent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:checked="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <LinearLayout
                android:id="@+id/llvibrate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:text="@string/enable_push_noti"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_title" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/tv_rateapp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="17dp"
                android:paddingEnd="17dp"
                android:text="@string/rateapp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/tv_shareapp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="17dp"
                android:paddingEnd="17dp"
                android:text="@string/shareapp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/tv_moreapp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="17dp"
                android:paddingEnd="17dp"
                android:text="@string/moreapp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="17dp"
                android:paddingEnd="17dp"
                android:text="@string/privacypolicy"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="17dp"
                android:paddingEnd="17dp"
                android:text="@string/about_us"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_title" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>